<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/login_title"
        style="@style/Theme.Kabuki"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/login_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/view_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fullWhite"
                android:hint="@string/contact_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/view_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fullWhite"
                android:hint="@string/contact_pass"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/form_login_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_connect"
            android:textColor="@color/dark" />

        <Button
            android:id="@+id/login_button"
            style="@style/Theme.Kabuki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:onClick="requestProfile"
            android:text="@string/login_button"
            android:textColor="@color/fullWhite" />

        <Button
            android:id="@+id/login_register"
            style="@style/Theme.Kabuki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dark"
            android:text="@string/login_button_register"
            android:textColor="@color/fullWhite"
            android:onClick="requestRegister"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/menu"></com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>