<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/fullWhite" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="100dp"
            android:background="@color/dark"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo_kabuki"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:onClick="goToWhatsapp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/whatsapp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/whatsapp"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/whatsapp_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textColor="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:onClick="goToInstagram"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/instagram" />

            <TextView
                android:id="@+id/instagram_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/instagram"
                android:textColor="@color/blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/facebook" />

            <TextView
                android:id="@+id/facebook_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/comming_soon"
                android:textColor="@color/blue" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/design_title2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/autor"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>