<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/full_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/red"
            android:gravity="center|center_horizontal"
            android:text="@string/contact_title"
            android:textColor="#FFFFFF" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_mail"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_mail"
                        android:textColor="@color/dark" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_name"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_name"
                        android:textColor="@color/dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_size"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_size"
                        android:textColor="@color/dark" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_amount"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_amount"
                        android:textColor="@color/dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_design"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_design"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_design"
                        android:textColor="@color/dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_phone"
                        android:textColor="@color/dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_address"
                        style="@style/Theme.Kabuki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="#ffffff"
                        android:hint="@string/contact_address"
                        android:textColor="@color/dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_send"
                    app:backgroundTint="@color/red" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>