<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:background="@color/dark"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo_kabuki"
                tools:ignore="ImageContrastCheck" />

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="right"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/red"
                app:sliderIndicatorUnselectedColor="@color/gray"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

            <TextView
                android:id="@+id/home_title"
                style="@style/Theme.Kabuki"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/about_title" />

            <TextView
                android:id="@+id/home_description"
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_description" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/design_6" />

            <TextView
                android:id="@+id/home_designs"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/about_designs" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="80dp"
                app:srcCompat="@drawable/designs" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>